# tiingo-api

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/tiingo/: __init__.py  api.py
tests/: test_api.py
